--- a/2018.3.14.md
+++ b/2018.3.14.md
@@ -128,3 +128,4 @@ for(var i = 0 , len = lists.length ; i < len ; i++){
 父函数参数和局部变量将被及时冻结，引用并保持到闭包本身被释放。通过闭包，只要闭包存在，这些变量和参数就会继续保持优秀的参考，并且由于闭包可以超出其父函数的寿命，因此该函数中的任何本地函数和参数都可以生存。
 
 参考[JavaScript中的匿名函数及函数的闭包](http://www.cnblogs.com/rainman/archive/2009/05/04/1448899.html)
+关于[npm scripts](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
