--- a/2018.3.14.md
+++ b/2018.3.14.md
@@ -111,13 +111,13 @@ for(var i = 0, len = lists.length; i < len; i++){
         alert(this.$$index);    
     };
 ```
-解决三：在循环外定义一个函数
+解决三：
 ```
 function eventListener(list, index){
     list.onmouseover = function(){
         alert(index);
     };
-}
+}//在循环外定义一个函数
 var lists = document.getElementsByTagName('li');
 for(var i = 0 , len = lists.length ; i < len ; i++){
     eventListener(lists[ i ] , i);
