--- a/2018.3.14.md
+++ b/2018.3.14.md
@@ -1,9 +1,10 @@
 
 ## JavaScript中的匿名函数及函数的闭包
 
+参考[JavaScript中的匿名函数及函数的闭包](http://www.cnblogs.com/rainman/archive/2009/05/04/1448899.html)  
 ### 匿名函数
 (没有函数名的函数)  
-1.创建一个函数，再赋值给变量
+1.创建一个函数，再赋值给变量
 ```
 var double = function(x) { return 2* x; }
 ```
@@ -37,7 +38,7 @@ function delay(x , y  , time){
 
 ### 匿名函数最大的用途是创建闭包（这是JavaScript语言的特性之一），并且还可以构建命名空间，以减少全局变量的使用。
 
-1.闭包通过全局变量来运行局部变量，大大减少了全局变量的使用，增强了网页的安全性。
+1.闭包通过全局变量来运行局部变量，大大减少了全局变量的使用，增强了网页的安全性。
 ```
 var oEvent = {};//全局变量
 (function(){ 
@@ -54,7 +55,7 @@ var rainman = (function(x , y){
     return x + y;
 })(2 , 3);
 ```
-3.通过创建创建新函数，实现局部变量可以通过函数被访问
+3.通过创建创建新函数，实现局部变量可以通过函数被访问
 ```
 var outer = null;
 
@@ -111,7 +112,7 @@ for(var i = 0, len = lists.length; i < len; i++){
         alert(this.$$index);    
     };
 ```
-解决三：
+解决三：
 ```
 function eventListener(list, index){
     list.onmouseover = function(){
@@ -127,5 +128,5 @@ for(var i = 0 , len = lists.length ; i < len ; i++){
 #### [导致内存泄露](https://docs.microsoft.com/zh-cn/microsoft-edge/dev-guide/understanding-leaks)
 父函数参数和局部变量将被及时冻结，引用并保持到闭包本身被释放。通过闭包，只要闭包存在，这些变量和参数就会继续保持优秀的参考，并且由于闭包可以超出其父函数的寿命，因此该函数中的任何本地函数和参数都可以生存。
 
-参考[JavaScript中的匿名函数及函数的闭包](http://www.cnblogs.com/rainman/archive/2009/05/04/1448899.html)
-关于[npm scripts](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
+这是我看到的一篇关于[npm scripts](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
+在之前webpack学习的时候对于scripts有些迷茫的地方，这篇文章我觉得有助于我们理解
