--- a/2018.3.14.md
+++ b/2018.3.14.md
@@ -118,7 +118,7 @@ function eventListener(list, index){
     list.onmouseover = function(){
         alert(index);
     };
-}//在循环外定义一个函数
+}//在循环外定义一个函数
 var lists = document.getElementsByTagName('li');
 for(var i = 0 , len = lists.length ; i < len ; i++){
     eventListener(lists[ i ] , i);
@@ -129,4 +129,4 @@ for(var i = 0 , len = lists.length ; i < len ; i++){
 父函数参数和局部变量将被及时冻结，引用并保持到闭包本身被释放。通过闭包，只要闭包存在，这些变量和参数就会继续保持优秀的参考，并且由于闭包可以超出其父函数的寿命，因此该函数中的任何本地函数和参数都可以生存。
 
 这是我看到的一篇关于[npm scripts](http://www.ruanyifeng.com/blog/2016/10/npm_scripts.html)
-在之前webpack学习的时候对于scripts有些迷茫的地方，这篇文章我觉得有助于我们理解
+在之前webpack学习的时候对于scripts有些迷茫的地方，这篇文章我觉得有助于我们理解
