--- a/2018.3.14.md
+++ b/2018.3.14.md
@@ -16,7 +16,7 @@ var double = function(x) { return 2* x; }
 ```
 
 ### 闭包
-函数的嵌套，内层的函数可以使用外层函数的所有变量，即使外层函数已经执行完毕(涉及[JavaScript中作用域链](https://www.cnblogs.com/buchongming/p/5858026.html))
+函数的嵌套，内层的函数可以使用外层函数的所有变量，即使外层函数已经执行完毕(涉及[JavaScript中作用域链](https://www.w3cplus.com/javascript/understanding-scope-in-javascript.html))
 ```
 function forTimeout(x, y){
     alert(x + y);
