--- a/2018.3.16.md
+++ b/2018.3.16.md
@@ -106,7 +106,7 @@ console.log(laptop === laptopDeepClone); // => false
 console.log(laptop.screen === laptopDeepClone.screen); // => false 
 ```
 #### Object Spread原型丢失（不保存源对象的原型）：
-如果创建了一个类Game，在创建一个调用构造函数实例doom，对这个实例进行克隆的时候就会造成，doomClone对象其原型是Object.prototype，而不是Game.prototype，这时就会出现原型丢失。要修复丢失的原型，需要手动使用__proto__。
+如果创建了一个类Game，在创建一个调用构造函数实例doom，对这个实例进行克隆的时候就会造成，doomClone对象其原型是Object.prototype，而不是Game.prototype，这时就会出现原型丢失。要修复丢失的原型，需要手动使用__proto__。
 **但是运用Object.assign()就能将原型克隆**
 #### 合并多个对象
 ```
