--- a/2018.4.28.md
+++ b/2018.4.28.md
@@ -106,7 +106,7 @@ html {
 
 舞台内容（gameArea）会保持宽高比进行缩放适配浏览器可视窗口（window），缩放至其能显示完整的舞台内容。
 
-<img src = "">
+<img src = "https://cdn.glitch.com/6fab60b1-32c5-42ee-b5f3-40edd35dc042%2F%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202018-04-29%20%E4%B8%8B%E5%8D%883.58.20.png?1524988817866">
 
 代码如下：
 ```
@@ -127,7 +127,7 @@ CONTAIN: function(){
 
 取浏览器可视窗口与游戏内容的宽度比或高度比之间较大者。
 
-<img src = "">
+<img src = "https://cdn.glitch.com/6fab60b1-32c5-42ee-b5f3-40edd35dc042%2F%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202018-04-29%20%E4%B8%8B%E5%8D%883.59.50.png?1525008606437">
 
 代码如下：
 ```
@@ -144,13 +144,13 @@ COVER: function(){
 
 这就要保证在设计的时候重点显示内容在“安全区域”之内 ———— 它应该是由最小的屏幕可视窗口（目前应该是 iPhone 4 ）与最大的屏幕可视窗口（目前应该是 iPhone 7 Plus）叠加后得出的重叠区域。
 
-<img src = "">
+<img src = "https://cdn.glitch.com/6fab60b1-32c5-42ee-b5f3-40edd35dc042%2F%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202018-04-29%20%E4%B8%8B%E5%8D%884.20.31.png?1525008633962">
 
 3. Fill模式
 
 对于游戏内容的宽应用其与可视窗口的宽度比，而游戏内容的高应用其与可视窗口的高度比。
 
-<img src = "">
+<img src = "https://cdn.glitch.com/6fab60b1-32c5-42ee-b5f3-40edd35dc042%2F%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202018-04-29%20%E4%B8%8B%E5%8D%884.20.37.png?1525008658969">
 
 代码如下：
 ```
@@ -170,7 +170,7 @@ FILL: function(){
 
 舞台内容（gameArea）等比进行缩放至与浏览器可视窗口的一致的宽度大小，而舞台的高度（Canvas高度）进行重新绘制其高度为浏览器可视窗口的高度。缩放比例为：为浏览器可视窗口与游戏内容的宽度比。
 
-<img src = "">
+<img src = "https://cdn.glitch.com/6fab60b1-32c5-42ee-b5f3-40edd35dc042%2F%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202018-04-29%20%E4%B8%8B%E5%8D%884.20.45.png?1525008723021">
 
 代码如下：
 ```
@@ -189,7 +189,7 @@ FIXED_WIDTH: function(){
 
 舞台内容（gameArea）等比进行缩放至与浏览器可视窗口的一致的高度大小，而舞台的宽度（Canvas宽度）进行重新绘制其宽度为浏览器可视窗口的宽度。缩放比例为：浏览器可视窗口与游戏内容的高度比。
 
-<img src = "">
+<img src = "https://cdn.glitch.com/6fab60b1-32c5-42ee-b5f3-40edd35dc042%2F%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202018-04-29%20%E4%B8%8B%E5%8D%884.20.49.png?1525008761396">
 
 代码如下:
 ```
