--- a/2018.7.8.md
+++ b/2018.7.8.md
@@ -57,7 +57,7 @@ IPLD 其实是一个转换中间件，将现有的异构数据结构统一成一
 大的视频通常不会都存在一个节点，可能分片存在其它一些子节点上，IPFS 把这些节点列表全部并行抓取，最后由本地的 manager 拼成完整的文件。并行的速度远远大于直接下载完整文件的速度，我很快就能在本地化的浏览器上看到电影，还可以继续分享给其他人。
 
 
-### 应用
+### 应用
 
 + [基于IPFS和Ngrok构建自维护资源网关](https://www.daijiale.cn/%E5%8C%BA%E5%9D%97%E9%93%BE/%E3%80%90ipfs%E3%80%91%E5%9F%BA%E4%BA%8Eipfs%E5%92%8Cngrok%E6%9E%84%E5%BB%BA%E8%87%AA%E7%BB%B4%E6%8A%A4%E8%B5%84%E6%BA%90%E7%BD%91%E5%85%B3%EF%BC%88%E5%85%A5%E9%97%A8%EF%BC%89.html)
 + [基于IPFS的音乐播放器](http://ipfser.org/2018/05/18/r41/)
@@ -65,6 +65,6 @@ IPLD 其实是一个转换中间件，将现有的异构数据结构统一成一
 
 
 ### 参考
-[是时候和 404 说再见了](https://zhuanlan.zhihu.com/p/37077160)
-[IPFS官网](https://ipfs.io/docs/getting-started/)
-[详解IPFS的本质、技术架构以及应用](http://ipfser.org/2018/03/28/r33/)
++ [是时候和 404 说再见了](https://zhuanlan.zhihu.com/p/37077160)
++ [IPFS官网](https://ipfs.io/docs/getting-started/)
++ [详解IPFS的本质、技术架构以及应用](http://ipfser.org/2018/03/28/r33/)
