--- a/2018.9.21.md
+++ b/2018.9.21.md
@@ -1,6 +1,6 @@
 ## Use React's Ref on a DOM node in React
 
-特别注意：不要将 <code>ref</code> 属性与 <code>this.refs</code> 对象混淆。后者在过去用于React,是指在回调函数上使用一个字符串来引用一个DOM节点。
+特别注意：不要将 <code>ref</code> 属性与 <code>this.refs</code> 对象混淆。后者在过去用于 React，是指在回调函数上使用一个字符串来引用一个DOM节点。
 
 ### Ref属性如何工作？
 
@@ -46,7 +46,7 @@ class SearchForm extends Component {
 
 以下是 ref 在 React DOM 中使用的适用场合:
 > + 管理 focus，进行文本选择或媒体播放。使用该 ref 属性来访问DOM API，获得一个输入元素的值，或者触发 <code>focus()</code> 方法
-> + 与第三方 DOM 库集成。使用 ref 属性作为第三方组件的入口点
+> + 与第三方 DOM 库集成。使用 ref 属性作为第三方组件的入口点
 > + 强制触发动画。
 
 #### functional stateless components
