--- a/2018.9.22.md
+++ b/2018.9.22.md
@@ -2,11 +2,11 @@
 
 Intersection Observer API是一个浏览器API，可用于跟踪上下文中HTML元素在浏览器实际视口中的位置。
 
-官方文档中的解释：
+官方文档中的解释：
 
 > “The Intersection Observer API provides a way to asynchronously observe changes in the intersection of a target element with an ancestor element or with a top-level document’s viewport.”
 
-说明了这是一种异步观察实现交集检测,允许配置一个被称为 **目标** 的元素与设备视口或指定元素相交时调用的回调。出于此 API 的目的，这称为 **根元素** 或 **根**。通过观察与文档视口相关的交叉点更改（通过指定 null 为根元素来完成）。无论您是使用视口还是其他元素作为根，API 都以相同的方式工作，只要目标元素的可见性发生变化，就会执行您提供的回调函数，以便它与所需的交叉点交叉。
+说明了这是一种异步观察实现交集检测,允许配置一个被称为 **目标** 的元素与设备视口或指定元素相交时调用的回调。出于此 API 的目的，这称为 **根元素** 或 **根**。通过观察与文档视口相关的交叉点更改（通过指定 null 为根元素来完成）。无论您是使用视口还是其他元素作为根，API 都以相同的方式工作，只要目标元素的可见性发生变化，就会执行您提供的回调函数，以便它与所需的交叉点交叉。
 
 目标元素与其根之间的交叉度是交叉比。这是目标元素的百分比的表示，其作为介于 0.0 和 1.0 之间的值可见。
 
@@ -31,14 +31,14 @@ var observer = new IntersectionObserver(callback, options);
 + <code>threshold</code>，指示应该执行观察者回调的目标可见性的百分比。
 
 #### 设定阈值有什么作用？
-由于 API 仅报告跨越这些阈值的可见性更改，证明我们只能设定特定的阈值，到达则触发事件。
+由于 API 仅报告跨越这些阈值的可见性更改，证明我们只能设定特定的阈值，到达则触发事件。
 
 例如，如果希望每次目标的可见性向后或向前通过每个25％标记时得到通知，则应在创建观察者时将数组[0,0.25,0.5,0.75,1]指定为阈值列表。
 
 [example](https://codepen.io/pen/)
 
 
-### 实例1:使文章的各个部分之间存在导航跳转
+### 实例1:使文章的各个部分之间存在导航跳转
 
 1. 锚的导航--单击锚标记导航到文章中的匹配部分
 
@@ -185,9 +185,9 @@ export default App;
 
 此外，必须通过将所有元素（单个引用）传递给观察者的 <code>observe</code> 方法来显式启动观察。这在 <code>componentDidMount()</code> 生命周期方法中的 React 中发生，因为只有这样才能为 <code>render()</code> 方法中的元素应用所有引用。
 
-### 实例2:[无限滚动list](https://www.robinwieruch.de/react-infinite-scroll/)
+### 实例2:[无限滚动list](https://www.robinwieruch.de/react-infinite-scroll/)
 
-参考：
+参考：
 + [Intersection Observer API in React](https://www.robinwieruch.de/react-intersection-observer-api/)
 + [Infinite Scroll in React](https://www.robinwieruch.de/react-infinite-scroll/)
 + [MDN](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API#Intersection_change_callbacks)
