--- a/2018.9.21.md
+++ b/2018.9.21.md
@@ -98,7 +98,7 @@ class FocusedInput extends Component {
 
 
 
-### 如何用其他方式替代 ref
+### 如何用其他方式替代 ref
 
 + 通过使用 React 中的状态来存储输入值而不是使用元素实例，来减少 ref 属性。
 
